--- a/QUICKbuy/src/main/resources/application.properties
+++ b/QUICKbuy/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.freemarker.expose-request-attributes=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=cragent@yandex.ru
+spring.mail.password=vzfnekxfgmuqqwut
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
+
+#admin@mail.ru
+#admin
